# NodeStat

./: .gitignore  COMPARISON.md  README.md  README_TUI.md  build.sh  go.mod  main.go
internal/models/: node.go
internal/scheduler/: interface.go  mock.go  slurm.go  torque.go
internal/ui/: app.go
nodestat-rust/: Cargo.toml  README.md  REFINEMENTS.md  build_pypi.sh  pyproject.toml
nodestat-rust/python/nodestat_tui/: __init__.py
nodestat-rust/src/: main.rs  models.rs  ui.rs
nodestat-rust/src/schedulers/: mock_scheduler.rs  mod.rs  slurm.rs  torque.rs
