[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "nodestat-tui"
version = "1.0.0"
description = "Modern TUI for HPC cluster monitoring"
authors = [{name = "NodeStat Contributors", email = "nodestat@example.com"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: System :: Clustering",
    "Topic :: System :: Systems Administration",
]
keywords = ["hpc", "slurm", "cluster", "tui", "monitoring"]

[project.urls]
homepage = "https://github.com/pbasting/NodeStat"
repository = "https://github.com/pbasting/NodeStat"
documentation = "https://github.com/pbasting/NodeStat#readme"

[project.scripts]
nodestat = "nodestat_tui:main"

[tool.maturin]
python-source = "python"
module-name = "nodestat_tui._internal"